[package]
name = "websocket_listener_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.18.0"
native-tls = "0.2.11"
http = "0.2.8"
futures = "0.3.26"
futures-util = "0.3.26"
tokio-tungstenite = {version="0.18.0", features = ["native-tls"] }
tokio = {version="1.25.0", features = ["rt-multi-thread","rt","macros"] }
